# 4blue

./: README.md  configtest.py  db.sqlite3  main.py  pyproject.toml
chat/: settings.py  urls.py
client-chat/: package-lock.json  package.json
client-chat/src/: App.js
client-chat/src/components/: Chat.js  History.js
client-chat/src/helpers/: axios.js
core/: models.py  routers.py  serializers.py  tests.py  viewsets.py
core/migrations/: 0001_initial.py
fixtures/: chat.py  user.py
